<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackend">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/Up_Splash_Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/splash_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/popular_movies_title"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            android:textStyle="bold"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/gifView"
        android:layout_width="200dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/splash_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/splash_icon_description"
        android:src="@mipmap/ic_movies"
        />

    <TextView
        android:id="@+id/splash_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/splash_icon"
        android:layout_centerHorizontal="true"
        android:text="@string/list_movies"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/splash_creator"
        android:textColor="@color/colorPrimaryDark"/>
</RelativeLayout>